--- a/http-server/project.html
+++ b/http-server/project.html
@@ -1,7 +1,7 @@
 <html>
     <title>project to Registration-FORM</title>
     <body>
-        <a href="./registration">registration</a>
-        <a hreft="/">Home</a>
+        <a href="registration.html"></a>
+        hello
     </body>
     </html>
